# create-dash-app

./: .gitattributes  .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: trigger-docs-build.yml
create_dash_app/: __main__.py  cli.py  generator.py  prompts.py
create_dash_app/models/: project_config.py
create_dash_app/templates/: .pre-commit.config.yaml.jinja  Dockerfile.jinja  README.md.jinja  TUTORIAL.md.jinja  docker-compose.yml.jinja  pyproject.toml.jinja
create_dash_app/templates/basic/: app.py.jinja  build.py.jinja  config.py.jinja
create_dash_app/templates/basic/assets/: styles.scss.jinja
create_dash_app/templates/basic/callbacks/: __init__.py.jinja  _discovery.py.jinja  homepage_callbacks.py.jinja  sample_callback.py.jinja
create_dash_app/templates/basic/components/: sample_component.py.jinja
create_dash_app/templates/basic/components/modals/: __init__.py.jinja  features.py.jinja
create_dash_app/templates/basic/pages/: homepage.py.jinja
create_dash_app/templates/basic/stores/: __init__.py.jinja  _discovery.py.jinja  sample_store.py.jinja
docs/: requirements.txt
docs/source/: api.rst  conf.py  examples.rst  index.rst  quickstart.rst  usage.rst
docs/source/_static/: CLI_Demo.webm  Functionality Demo.mov  Functionality_Demo.webm
docs/source/assets/: CLI Demo.mov
