# ============================================================================
# PROJECT METADATA (PEP 621)
# ============================================================================
# This section tells Python package installers (pip, uv, etc.) HOW to build
# this package. When you run `pip install` or `uv pip install`, the installer
# reads this section first to know which build backend to use.
[build-system]
# Install these packages into a TEMPORARY BUILD ENVIRONMENT just
# for the sake of building the CLI package.
requires = ["setuptools>=61.0", "wheel"]
# Use setuptools to build the package
build-backend = "setuptools.build_meta"

# PROJECT METADATA
[project]
name = "create-dash-app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "click>=8.3.0",
    "dash>=3.2.0",
    "dash-bootstrap-components>=2.0.4",
    "jinja2>=3.1.6",
    "pydantic>=2.12.3",
    "python-dotenv>=1.2.1",
    "questionary>=2.1.1",
]

[dependency-groups]
dev = [
    "build>=1.3.0",
    "furo>=2025.9.25",
    "ipykernel>=7.1.0",
    "pre-commit>=4.3.0",
    "pytest>=8.4.2",
    "ruff>=0.14.3",
    "sphinx>=8.2.3",
    "sphinx-autodoc-typehints>=3.5.2",
    "sphinxcontrib-video>=0.4.1",
]

# CONSOLE SCRIPTS (ENTRY POINTS)
# When user types `create-dash-app`, Python imports create_dash_app from
# create_dash_app/cli.py and calls the create_dash_app() function.
[project.scripts]
create-dash-app = "create_dash_app.cli:create_dash_app"

# SETUPTOOLS CONFIGURATION
# These sections control HOW setuptools packages your code into a wheel (.whl)
[tool.setuptools.packages.find]
where = ["."] # Search current directory
include = ["create_dash_app*"] # Include packages matching this pattern

# PACKAGE DATA: non-Python files to include in the wheel
# This is CRITICAL: without this, template files won't be included in the
# installed package, and the CLI won't be able to find them.
[tool.setuptools.package-data]
create_dash_app = ["templates/**/*"]

[tool.ruff]
line-length = 100
target-version = "py313"
indent-width = 4

[tool.ruff.lint]
# Enable Pyflakes (`F`) and a subset of the pycodestyle (`E`)  codes by default.
# Unlike Flake8, Ruff doesn't enable pycodestyle warnings (`W`) or
# McCabe complexity (`C901`) by default.
# I - isort
select = ["E", "F", "B", "I"]
ignore = ["B008"]

# Allow fix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = []

[tool.ruff.format]
# Like Black, use double quotes for strings.
quote-style = "double"


# Enable Ruff's formatter.
preview = true

# Like Black, indent with spaces, rather than tabs.
indent-style = "space"

# Like Black, respect magic trailing commas.
skip-magic-trailing-comma = false

# Like Black, automatically detect the appropriate line ending.
line-ending = "auto"

# Enable auto-formatting of code examples in docstrings. Markdown,
# reStructuredText code/literal blocks and doctests are all supported.
docstring-code-format = true

# Set the line length limit used when formatting code snippets in
# docstrings.
#
# This only has an effect when the `docstring-code-format` setting is
# enabled.
docstring-code-line-length = "dynamic"

[tool.uv.workspace]
members = [
    "sample",
]

[tool.ruff.lint.isort]
known-third-party = ["fastapi", "sqlmodel", "pydantic", "neomodel", "neo4j"]
